# kubehelm

./: .gitignore  README.md  makefile  manage.py  requirements.txt  run  run.py  setup.cfg  setup.py
.github/workflows/: py-pi-push.yaml  py-pi-test.yaml  test.yaml
apply/: __init__.py  apply.py  template.py
controller/: base.py
core/: command.py
k8s/: apps.py
k8s/apps/: manifest.py  network.py
k8s/controller/: __init__.py  base.py
k8s/core/: command.py  controller.py  network.py  scripts.py
k8s/core/scripts/: cert_manager.bash  helm.bash  ingress.bash
k8s/helm_values/bitnami/: wordpress.yaml
k8s/manifests/: api.py  apps.py  base.py
k8s/models/: base.py  helm.py  manifest.py  mixin.py  objects.py  scripts.py
k8s/scripts/: cert_manager.bash  helm.bash
k8s/template/: base.py
k8s/templates/apps/: django.yaml  mariadb.yaml  phpmyadmin.yaml  whoami.yaml  (+2 more)
kubehelm/: __init__.py  apps.py  configuration.py  execute.py  manager.py  objects.py  script.py  template.py
kubehelm/apps/: network.py
kubehelm/controller/: apps.py  handler.py
kubehelm/core/: handler.py
kubehelm/models/: __init__.py  base.py  context.py  execute.py  helm.py  kubernetes.py  manifest.py  script.py  scripts.py  template.py
kubehelm/scripts/: cert_manager.bash  helm.bash  ingress.bash
kubehelm/template/: base.py
manifests/: apps.py  k8s.py  manifest.py  template.py
scripts/: cert_manager  helm  run  update_certificate_manager.bash  update_ingress.bash  upgrade_templates.bash
templates/: help.txt  test.yaml  whoami.yaml
templates/apps/: django.yaml  whoami.yaml  wordpress.1.yaml  wordpress.yaml
templates/certificate/: cluster_issuer.yaml  letsencrypt_prod.yaml
tests/: run-tests.py  test_api.py  test_apps.py  test_configuration.py  test_context.py  test_core.py  test_helm.py  test_manifests.py  test_network.py  test_objects.py  test_template.py
(+19 files in other folders)
