[metadata]
author = Asim Altuwayjiri
# author_email = author@example.com
description = Deploy a production ready apps to Kubernetes using Helm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asim3/kubehelm
project_urls =
    Bug Tracker = https://github.com/asim3/kubehelm/issues
    Source = https://github.com/asim3/kubehelm
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Build Tools
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only